# Backend_ArtistManagementtSystem

./: .env  .env.sample  .gitignore  Dockerfile.build  Dockerfile.dev  Dockerfile.production  README.md  db.sqlite3  pyproject.toml  requirements.txt  script.sh
album/: models.py  serializers.py  urls.py
album/migrations/: 0001_initial.py  0002_album_band.py  0002_initial.py  0003_alter_album_artist_alter_album_description.py  0003_alter_album_description.py  0004_alter_album_modified_by.py  0005_remove_album_img_banner_album_img_cover_and_more.py  0005_remove_album_totallike_remove_album_totalmusic_and_more.py  0006_comment_commentlike_commentreply_commentreplylike_and_more.py
album/views/: create.py  decorator.py  delete.py  disable.py  edit.py  enable.py  get.py  hide.py  recover.py  unhide.py
band/: admin.py  models.py  serializers.py  urls.py
band/migrations/: 0001_initial.py  0002_band_modified_by.py  0002_initial.py  0003_alter_band_description.py  0003_band_is_deleted_band_is_disabled_and_more.py  0004_band_bandstagename_band_password.py  0004_remove_band_banner_img_remove_band_profile_img_and_more.py  (+5 more)
core/: __settings.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
customizeable/: _views.py  admin.py  apps.py  models.py  urls.py  views.py
genre/: admin.py  apps.py  models.py  serializers.py  urls.py
music/: _views.py  admin.py  models.py  serializers.py  urls.py
seed/: albums.json  genres.json  musics.json  themes.json  users.json
templates/: 404.html
user/: admin.py  manager.py  models.py  serializers.py  tests.py  urls.py
(+117 files in other folders)
